--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
     "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.0.4",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
