--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.0.4",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
@@ -27,6 +28,7 @@
     "@angular/material": "^20.0.4",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.1",
     "tslib": "^2.3.0",
